--- a/css/style_dataset.css
+++ b/css/style_dataset.css
@@ -496,7 +496,7 @@ error msg block behavior
 }
 
 .menu-bar.features-is-visible {
-  right: calc(-252.5px/2 + 29px + 214px);
+  right: calc(-252.5px/2 + 32px + 214px);
   -webkit-transition: right 0.3s;
   -moz-transition: right 0.3s;
   transition: right 0.3s;
